[package]
name = "post_quantum_exploration"
version = "0.1.0"
edition = "2024"

[features]
stark = []

[dependencies]
anyhow = "1.0.99"
bitvec = "1.0.1"
rand = "0.9.2"
sha3 = "0.10.8"

[dev-dependencies]
fake = "4.4.0"

[profile.release]
debug = true

[profile.profiling]
inherits = "release"
debug = true
